ПР №8. Правки после ревью.

--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
     <title>Закрывающий тег</title>
-    <link rel="stylesheet" href="../fonts/fonts.css">
-    <link rel="stylesheet" href="../styles/variables.css">
-    <link rel="stylesheet" href="../styles/globals.css">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/animations.css">
-    <link rel="stylesheet" href="../styles/themes.css">
-    <link rel="icon" href="../svg/favicon.svg" type="image/svg+xml">
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/variables.css">
+    <link rel="stylesheet" href="styles/globals.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/animations.css">
+    <link rel="stylesheet" href="styles/themes.css">
+    <link rel="icon" href="svg/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/favicon-16x16.png"
+      href="images/favicon-16x16.png"
     >
-    <link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
   </head>
   <body class="page">
     <header class="header">
       <div class="header__content">
         <a class="header__logo">&lt;/HTML&gt;</a>
-        <h1 class="header__h1">Закрывающий тег</h1>
+        <h1 class="header__heading">Закрывающий тег</h1>
       </div>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -68,7 +68,7 @@
           <span class="content__image-label">&lt;Интересно&gt;</span>
           <img
             class="content__card-image filter-contrast"
-            src="../images/card1.jpg"
+            src="images/card1.jpg"
             loading="lazy"
             alt="Человек пишет ручкой на бумаге, рядом на столе лежит блокнот и стоит чашка."
           >
@@ -136,7 +136,7 @@
           <span class="content__image-label">&lt;Главное - начать&gt;</span>
           <img
             class="content__card-image filter-hue-rotate"
-            src="../images/card2.jpg"
+            src="images/card2.jpg"
             loading="lazy"
             alt="Надпись 'DON'T PANIC'."
           >
@@ -207,7 +207,7 @@
           <span class="content__image-label">&lt;Вдохновение&gt;</span>
           <img
             class="content__card-image filter-grayscale"
-            src="../images/card3.jpg"
+            src="images/card3.jpg"
             loading="lazy"
             alt="Надпись 'FINISH' на искусственной траве, обозначающая финишную линию."
           >
@@ -278,7 +278,7 @@
           >
           <img
             class="content__card-image filter-sepia"
-            src="../images/card4.jpg"
+            src="images/card4.jpg"
             loading="lazy"
             alt="Логотип GitHub в виде белого кота на фоне яйца с текстурой, напоминающей чешую, и разноцветными геометрическими фигурами."
           >
@@ -351,7 +351,7 @@
           >
           <img
             class="content__card-image filter-saturate"
-            src="../images/card5.jpg"
+            src="images/card5.jpg"
             loading="lazy"
             alt="Две руки держат чёрное бумажное сердце, символизируя поддержку и связь."
           >
@@ -420,7 +420,7 @@
           <span class="content__image-label">&lt;Нужно отвлечься&gt;</span>
           <img
             class="content__card-image filter-blur"
-            src="../images/card6.jpg"
+            src="images/card6.jpg"
             loading="lazy"
             alt="Слово 'REST', выложенное буквами из игры 'Эрудит', символизирующее отдых."
           >
@@ -489,7 +489,7 @@
           <span class="content__image-label">&lt;Сон или учёба?&gt;</span>
           <img
             class="content__card-image filter-invert"
-            src="../images/card7.jpg"
+            src="images/card7.jpg"
             loading="lazy"
             alt="Человек держит песочные часы, символизируя течение времени."
           >
@@ -555,7 +555,7 @@
           <span class="content__image-label">&lt;В&nbsp;начале пути&gt;</span>
           <img
             class="content__card-image filter-multiple"
-            src="../images/card8.jpg"
+            src="images/card8.jpg"
             loading="lazy"
             alt="Длинная извилистая дорога, уходящая вдаль среди леса, символизирующая длинный путь вперёд."
           >
@@ -627,14 +627,14 @@
           aria-controls="dialog"
         >
           <svg viewBox="0 0 21 21" class="button__img">
-            <use href="../svg/floppy.svg#floppy" />
+            <use href="svg/floppy.svg#floppy" />
           </svg>
           <span class="button__text">Сохранить на&nbsp;память</span>
         </button>
         <dialog class="content__footer-dialog" id="dialog">
           <div class="content__footer-dialog-content">
             <svg class="content__footer-dialog-img" viewBox="0 0 21 21">
-              <use href="../svg/floppy.svg#floppy" />
+              <use href="svg/floppy.svg#floppy" />
             </svg>
             <h2 class="content__footer-dialog-title">
               Вставьте дискету, чтобы продолжить
